Add code for nutrition info page

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -142,7 +142,7 @@
                                     <td>{{ query_val.meal_date }}</td>
                                     <td>{{ query_val.type }}</td>
                                     <td>{{ query_val.meal_desc }}</td>
-                                    <td>{{ query_val.amount }}</td>
+                                    <td>{{ query_val.amount |round | int }}</td>
                                 </tr> 
                                 {% endfor %}
                                                        
