--- a/static/css/style.css
+++ b/static/css/style.css
@@ -338,12 +338,12 @@ ul, ol {
 .form-group {
 	border: 4px solid #f44336;
 }
-.svg-container {
-	height: 50px;
+/* .svg-container { */
+	/* height: 50px;
 	padding-top: 50px;
 	padding-left: 40px;
-	border: 4px solid #f44336;
-}
+	border: 4px solid #f44336; */
+/* } */
 /*---------------------
   About Section
 -----------------------*/
