--- a/templates/layout.html
+++ b/templates/layout.html
@@ -48,7 +48,7 @@
                 </li>
                 <li
                   {% if session['page'] == 'intake' %}  class="active" {% endif %}>
-                  <a href="/intake">My Intake</a></li>
+                  <a href="/intake">Food History</a></li>
                 </li>
                 {% endif %} 
                                 
