--- a/templates/Daily_vizualization.html
+++ b/templates/Daily_vizualization.html
@@ -15,7 +15,7 @@
           <div class="panel panel-default">
             <div class="panel-heading">Filter Search</div>
             <div class="panel-body">
-              <form>
+              <form action = "" target="_blank" method="GET">
                 <div class="form-group">
                   <ul class="list-group" id="filters">
                     <li class="filter list-group-item">
@@ -23,10 +23,8 @@
                       <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
                     </li>
                     <li class="filter list-group-item">
-                      <label for="nutrient">Select Nutrients</label>
-                      <select id="selectnutrients">                                         
-                      </select>
-                    </li>
+                      <button type="submit" class="register-btn" id="button" >Plot</button>
+                  </li>
                   </ul>
                 </div>
               </form>
@@ -37,7 +35,17 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <div id ="plot">
+            <div id ="plot1">
+                      
+                                
+            </div>
+            <div id ="plot2">
+                      
+                                
+            </div>
+            <div id ="plot3">
+                      
+                                
             </div>
           </div>
         </div>  
@@ -46,15 +54,19 @@
   </section>
  
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-  <script src="../static/JS/data_dri_macronutrients.js"></script>
-  <script src="../static/JS/data_dri_minerals.js"></script>
-  <script src="../static/JS/data_dri_vitamins.js" ></script>
-  <script src="../static/JS/Required_data_calculate.js" ></script>
-  <script src="../static/JS/userdata.js" ></script>
-  <script src="../static/JS/plot.js" ></script>
-  <script src="../static/JS/vizualization.js" ></script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script> 
+  <script type="text/javascript">
+
+    var graphs = {{graphJSON | safe}};
+    var ids = {{ids | safe}};
+
+    for(var i in graphs) {
+        Plotly.plot(ids[i], // the ID of the div, created above
+                    graphs[i].data,
+                    graphs[i].layout || {});
+    }
+  </script>
 
 
 
