Update food look up description

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -168,9 +168,21 @@
         $.getJSON("/nutriquicksearch?term=" + request.term, function (data) {
             
             response(
-                $.map(data.data, function (key) {
+                $.map(data, function (key) {
+
+                    descr = '';
+                    if(key[2] !=''){
+                        descr = ' ['+key[2];
+                        if(key[3] !=0){
+                            descr=descr+'  ('+key[3]+' g)';                        
+                        }
+                        descr=descr+']';
+                    }
+
+
                 return {
-                    label: key[1] + ' ['+key[2]+' kcal]',
+                    
+                    label: key[1] + descr,
                     value: key[0]
                 };
             }));
