Corrected the error which was appearing for Male user account in daily visualization

--- a/templates/Daily_vizualization.html
+++ b/templates/Daily_vizualization.html
@@ -39,10 +39,12 @@
                       
                                 
             </div>
+            <p style=”padding-bottom: 2ex; “></p>
             <div id ="plot2">
                       
                                 
             </div>
+            <p style=”padding-bottom: 2ex; “></p>
             <div id ="plot3">
                       
                                 
