Dashboard-default date to todays date and min serving count as 1

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -109,7 +109,7 @@
                         </div>
                         <div class="col-2">
                             <label for="name">Servings</label>
-                            <input type="number" min="0" max="20" placeholder="How much?" id="servings_count" name="servings_count">
+                            <input type="number" min="1" max="20" placeholder="How much?" id="servings_count" name="servings_count">
                           </div>
                             </div>
                             <button type="submit" class="register-btn">Add</button>
@@ -203,7 +203,7 @@
  
 </script>
 
-
+<script src="/static/js/date.js"></script>
   
 
   {% endblock %}
