Added the changes to Daily statistics Goals based on the user gender, height, weight, age, physical activity

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -18,9 +18,9 @@
                           <th scope="col"></th> </th>
                           <th scope="col">Calories (kcal)</th>
                           <th scope="col">Carbs (g)</th>
-                          <th scope="col">Total Fat (% kcal)</th>
+                          <th scope="col">Proteins (g)</th>
                           <th scope="col">Sodium (mg)</th>
-                          <th scope="col">Added Sugars (g)</th>
+                          <th scope="col">Water (L)</th>
                           <th scope="col">Fiber (g)</th>                      
                         </tr>
                     </thead>
@@ -33,9 +33,9 @@
 
                             <td>{{(daily_stats.cal)|round}}</td>
                             <td>{{(daily_stats.carbs)|round}}</td>
-                            <td>{{(daily_stats.fats)|round}}</td>
+                            <td>{{(daily_stats.protein)|round}}</td>
                             <td>{{(daily_stats.sodium)|round}}</td>
-                            <td>{{(daily_stats.sugar)|round}}</td>
+                            <td>{{(daily_stats.water)|round}}</td>
                             <td>{{(daily_stats.fiber)|round}}</td>
 
                         </tr> 
