--- a/templates/layout.html
+++ b/templates/layout.html
@@ -60,7 +60,7 @@
           
           {% if ('loggedin' in session) and (session['loggedin'] == True) %}
           <a href="/logout" class="primary-btn signup-btn">Logout</a>
-          <h4 style="color:red"></h4> Hello, <b>{{ session['username'] }}</b></h4>
+          <h4 style="color:red"></h4> Hello, <b>{{ session['username']|title }}</b></h4>
           {% endif %}    
         </div>
     </div>
