--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -79,6 +79,9 @@
                 <div class="section-title">
                     <h4>Quick Add</h4>
                 </div>
+                <div class="row">
+                    <div class="col-lg-12"><H4 style="color:#ff0000">{{msg}}</H4></div>
+                  </div>
                 <form action="" class="register-form" method="POST">
                     {{ form.hidden_tag() }}
                     {{ form.csrf_token }}
@@ -136,6 +139,7 @@
                         </thead>
 
                         <tbody>
+                                <!-- <tr><th scope="row">{{ top5_entries.count }}</th></tr> -->
                                 {% for query_val in top5_entries %}
                                 <tr>
                                     <th scope="row">{{loop.index}}</th>
