set max date to todays date in dashboard

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -100,7 +100,7 @@
                         <div class="col-2">
                             <label for="name">Date</label>
                             <!-- PK -->
-                            <input type="date" id="inputdate" name="inputdate">
+                            <input type="date" id="inputdate" name="inputdate" max=maxDate>
                           </div>
                         <div class="col-2">
                           <label for="name">Type</label>
