--- a/templates/Daily_vizualization.html
+++ b/templates/Daily_vizualization.html
@@ -1,6 +1,17 @@
 
 {% extends "layout.html" %}
 {% block pagetitle %}Nutrometer{% endblock %}
+<style>
+  #plot1 {
+        box-sizing: border-box;
+        padding: 10px;
+        width: 500px;
+        height: 500px;
+        border: 1px solid gray;
+        margin-top: -1px;
+        margin-left: -1px;
+  }
+  </style>
 {% block bodycontent %}
 
 
@@ -15,7 +26,7 @@
           <div class="panel panel-default">
             <div class="panel-heading">Filter Search</div>
             <div class="panel-body">
-              <form action = "" target="_blank" method="GET">
+              <form action = "" method="GET">
                 <div class="form-group">
                   <ul class="list-group" id="filters">
                     <li class="filter list-group-item">
