--- a/templates/Daily_vizualization.html
+++ b/templates/Daily_vizualization.html
@@ -32,7 +32,11 @@
                     <li class="filter list-group-item">
                       <label for="date">Enter a Date</label>
                       <!-- <input class="form-control" id="datetime" name="date" type="text" placeholder="1/11/2011"> -->
-                      <input type="date" id="inputdate" name="date">
+                      <input type="date" id="inputdate" name="date" max=maxDate  
+                      {% if request.args.get('date') %} 
+                        value={{ request.args.get('date') }}
+                      {% endif %}
+                      >
                     </li>
                     <li class="filter list-group-item">
                       <button type="submit" class="register-btn" id="button" >Plot</button>
@@ -48,11 +52,13 @@
         <div class="row">
           <div class="col">
             {% if date is defined %}
-            <h2 style="color:rgba(255, 72, 0, 0.938); text-align:center">Nutritional contents of your meal on {{date}}</h2>
+            <!-- <h2 style="color:rgba(255, 72, 0, 0.938); text-align:center">Nutritional contents of your meal on {{date}}</h2> -->
+            <h4 style="color:white; text-align:center">Nutritional contents of your meal on {{date}}</h2>
+            <div id ="plot1">
             {% endif %}
             <p style=”padding-bottom: 2ex; “></p>
             <div id ="plot1">
-             
+            </div>
                       
                                 
             </div>
@@ -76,18 +82,18 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script> 
   <script type="text/javascript">
+  
 
     var graphs = {{graphJSON | safe}}
     var ids = {{ids | safe}};
-    
  
     for(var i in graphs) {
-  
         Plotly.plot(ids[i], // the ID of the div, created above
                     graphs[i].data,
                     graphs[i].layout || {});
     }
   </script>
+<script src="/static/js/date1.js"></script>
 
   {% endblock %}
 
