--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
                 <div class="hero-text">
                     <span>You are what you eat</span>
                     <h1>Nutrition Tracker</h1>
-                    <p>Log your daily food intake and monitor your nutrition over time<br /> Nutional information to make informed dietary choices</p>
+                    <p>Log your daily food intake and monitor your nutrition over time<br /> Nutrional information to make informed dietary choices</p>
                     <a href="#" class="primary-btn" id="opener">Read More</a>
                 </div>
               </div>
