--- a/templates/Login.html
+++ b/templates/Login.html
@@ -5,8 +5,6 @@
 <head>
   <title>Nutrometer</title>
   <meta charset="UTF-8">
-  <!-- <meta name="description" content="Gutim Template"> -->
-  <!-- <meta name="keywords" content="Gutim, unica, creative, html"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -17,74 +15,25 @@
   <link rel="stylesheet" href="../static/css/slicknav.min.css" type="text/css">
   <link rel="stylesheet" href="../static/css/style.css" type="text/css">
   <link rel="stylesheet" href=https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/slate/bootstrap.min.css>
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> -->
-  <!-- <link rel="stylesheet" href="css/style.css" type="text/css" /> -->
 </head>
 <body>
   <header class="header-section">
     <div class="container">
         <div class="logo">
             <a href="index.html">
-                <img src="../static/images/Nutrometer.png"></img>
+              <img src="../static/images/Nutrometer.png"></img>
             </a>
         </div>
         <div class="nav-menu">
           <nav class="mainmenu mobile-menu">
               <ul>
-                  <li class="active"><a href="./index.html">Home</a></li>
-                  <li><a href="./about-us.html">About</a></li>
-                  <!-- <li><a href="./classes.html">Classes</a></li> -->
-                  <!-- <li><a href="./blog.html">Blog</a></li> -->
-                  <!-- <li><a href="./gallery.html">Gallery</a></li> -->
-                  <li><a href="./contact.html">Contacts</a></li>
+                <li class="active"><a href="./index.html">Home</a></li>
               </ul>
             </nav>
-          <!-- <a href="#" class="primary-btn signup-btn">Create Account</a>
-          <a href="#" class="primary-btn signup-btn">User Login</a> -->
+          <ref="#" class="primary-btn signup-btn">User Login</a> -->
         </div>
     </div>
   </header>
-  
-  <!-- <section class="hero-section set-bg" data-setbg="food.jpg">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-              <div class="hero-image">
-                <div class="hero-text">
-                    <span>FITNESS ELEMENTS</span> -->
-                    <!-- <h1>BMI CALCULATOR</h1>
-                    <p>Gutim comes packed with the user-friendly BMI Calculator<br /> shortcode which lets</p>
-                    <a href="#" class="primary-btn">Read More</a> -->
-                <!-- </div>
-              </div>
-            </div>
-        </div>
-    </div>
-  </section> --> 
-  <!-- </header> -->
-</div>
-<!-- Header End -->
-
-  <!-- <div id="menu">
-    <h1>Tracking</h1>
-    <ul>
-      <li><a href="http://www.free-css.com/">Meals</a></li>
-      <li><a href="http://www.free-css.com/">Monthly View</a></li>
-      <li><a href="http://www.free-css.com/">Weekly View</a></li>
-      <li><a href="http://www.free-css.com/">Menu Planning</a></li>
-      <li><a href="http://www.free-css.com/">Recomendations</a></li>
-      <li><a href="http://www.free-css.com/">CSS Reference</a></li>
-    </ul>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="thumbnail">
-       <img src="Nutrometer.png" alt="..." class="img-thumbnail"> -->
-        <!-- </div>
-      </div>
-    </div>
-  </div> -->
   
   <section class="register-section spad">
     <div class="container">
@@ -113,17 +62,9 @@
                     </form>
                 </div>
             </div>
-            <div class="col-lg-4">
-                <!-- <div class="register-pic">
-                    <img src="img/register-pic.jpg" alt="">
-                </div> -->
-            </div>
+            
         </div>
     </div>
-</section><div class="row">
-    <div class="col-md-12">
-    <!-- <img class="Nutrometer" src="Nutrometer.png"> -->
-    </div>
-  </div>
+</section>
 </body>
 </html>
